--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "jshint": "^2.11.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jshint": "^2.11.0"
+  },
   "scripts": {
     "test": "test"
   },
