--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Controls traffic lights",
   "main": "app.js",
   "dependencies": {
+    "ws": "7.2.1"
   },
   "devDependencies": {
     "jshint": "^2.11.0"
   },
   "scripts": {
+    "start": "nodejs app.js",
     "test": "test"
   },
   "repository": {
@@ -20,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/pprotas/controller/issues"
   },
-  "homepage": "https://github.com/pprotas/controller#readme"
+  "homepage": "https://github.com/pprotas/controller#readme",
+  "optionalDependencies": {
+    "bufferutil": "4.0.1",
+    "utf-8-validate": "5.0.2"
+  }
 }
