--- a/config/package.json
+++ b/config/package.json
@@ -12,6 +12,10 @@
     "jshint": "^2.11.0",
     "nodemon": "^2.0.2"
   },
+  "optionalDependencies": {
+    "bufferutil": "4.0.1",
+    "utf-8-validate": "5.0.2"
+  },
   "scripts": {
     "start": "nodemon src/app.js",
     "test": "test"
@@ -25,9 +29,5 @@
   "bugs": {
     "url": "https://github.com/pprotas/controller/issues"
   },
-  "homepage": "https://github.com/pprotas/controller#readme",
-  "optionalDependencies": {
-    "bufferutil": "4.0.1",
-    "utf-8-validate": "5.0.2"
-  }
+  "homepage": "https://github.com/pprotas/controller#readme"
 }
