--- a/src/package.json
+++ b/src/package.json
@@ -17,7 +17,8 @@
     "utf-8-validate": "5.0.2"
   },
   "scripts": {
-    "start": "nodemon --inspect src/app.js"
+    "start": "nodejs app.js",
+    "debug": "nodemon --inspect app.js"
   },
   "repository": {
     "type": "git",
