--- a/package.json
+++ b/package.json
@@ -2,32 +2,27 @@
   "name": "controller",
   "version": "1.0.0",
   "description": "Controls traffic lights",
-  "main": "app.js",
-  "type": "module",
   "dependencies": {
     "jsonfile": "6.0.1",
     "ws": "7.2.1"
   },
   "devDependencies": {
+    "@types/jsonfile": "5.0.0",
+    "@types/node": "13.9.0",
+    "@types/ws": "7.2.2",
+    "esm": "3.2.25",
     "jshint": "^2.11.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "ts-node": "8.6.2",
+    "typescript": "3.8.3"
   },
   "optionalDependencies": {
     "bufferutil": "4.0.1",
     "utf-8-validate": "5.0.2"
   },
   "scripts": {
-    "start": "nodejs app.js",
-    "debug": "nodemon --inspect app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pprotas/controller.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/pprotas/controller/issues"
-  },
-  "homepage": "https://github.com/pprotas/controller#readme"
+    "start": "nodemon --debug",
+    "debug": "node -r esm -r ts-node/register --inspect app.ts",
+    "build": "tsc"
+  }
 }
