--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Controls traffic lights",
   "dependencies": {
+    "@types/readline-sync": "1.4.3",
     "jsonfile": "6.0.1",
     "ws": "7.2.1"
   },
@@ -13,6 +14,7 @@
     "esm": "3.2.25",
     "jshint": "^2.11.0",
     "nodemon": "^2.0.2",
+    "readline-sync": "1.4.10",
     "ts-node": "8.6.2",
     "typescript": "3.8.3"
   },
